--- a/src/assets/styles/icon.css
+++ b/src/assets/styles/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?mayjxg');
-  src:  url('fonts/icomoon.eot?mayjxg#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?mayjxg') format('truetype'),
-    url('fonts/icomoon.woff?mayjxg') format('woff'),
-    url('fonts/icomoon.svg?mayjxg#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?j09vrk');
+  src:  url('fonts/icomoon.eot?j09vrk#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?j09vrk') format('truetype'),
+    url('fonts/icomoon.woff?j09vrk') format('woff'),
+    url('fonts/icomoon.svg?j09vrk#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-A:before {
+  content: "\e908";
+}
 .icon-ai250:before {
   content: "\e900";
 }
