--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -26,6 +26,7 @@ $fontSize : 16;
 .slide-enter,
 .slide-leave-to {
     transform: translate(0, -100%);
+    opacity: 0;
 }
 
 .slide-enter-to,
@@ -33,16 +34,18 @@ $fontSize : 16;
 .slide-up-enter-to,
 .slide-up-leave  {
     transform: translate(0, 0);
+    opacity: 1;
 }
 
 .slide-enter-active,
 .slide-leave-active,
 .slide-up-enter-active,
 .slide-up-leave-active {
-    transition: transform 0.3s;
+    transition: all 0.3s;
 }
 
 .slide-up-enter,
 .slide-up-leave-to {
     transform: translate(0, 100%);
+    opacity: 0;
 }
